# ai-blogpost-app

./: .gitignore  CLAUDE.md  README.md  development_goals.md
backend/: pyproject.toml
backend/src/: config.py  main.py
backend/src/api/models/: drafting.py  export.py  planning.py
backend/src/api/routes/: draft.py  export.py  feedback.py  files.py
backend/src/services/: agent_service.py  export_service.py
backend/src/utils/: file_parser.py  word_count.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/drafting/: DraftEditor.tsx  DraftingTab.tsx  FeedbackPanel.tsx  WordStats.tsx
frontend/src/components/planning/: AbstractInput.tsx  LengthSelector.tsx  PersonaSelector.tsx  PlanningTab.tsx  ReferenceInput.tsx  StyleSelector.tsx  TechnicalLevelMenu.tsx
frontend/src/components/publish/: ExportButtons.tsx  PreviewPane.tsx  PublishTab.tsx  StatsPanel.tsx
frontend/src/contexts/: BlogContext.tsx  ThemeContext.tsx
frontend/src/types/: index.ts
scripts/: dev.sh
tech-blog-helper/: SKILL.md
tech-blog-helper/references/: blog_outline_template.md  blog_writing_guidelines.md
